assets/css/style.css
/*Variables*/

@font-face {
    font-family: "interFont";
    src: url("/assets/fonts/Inter-VariableFont_slnt,wght.ttf") format("truetype");
    /* Add more src lines for other font file formats if necessary */
}

@font-face {
    font-family: "cinefontFont";
    src: url("/assets/fonts/cinecaption226.ttf") format("truetype");
}



:root {
    --wine-red: #c90064;
    --banner-fill-color: #1c1c1c;
    --content-fill-color: #2c2c2c;
    --link-default-color: #4ca1af;
    --link-hover-color: #a086d3;
    --margin-leftright-size-percent: 20%;
    --h1-leftindent: 0%;
    --h2-leftindent: calc(var(--h1-leftindent) + 3%);
    --h3-leftindent: calc(var(--h2-leftindent) + 1%);
    --p-leftindent: calc(var(--h3-leftindent) + 1%);
}

@media only screen and (max-width: 600px) {
    :root {
        --margin-leftright-size-percent: 5%;
    }
}

/*BGs*/
@keyframes loadDelayFade {
    0% {
        z-index: 13;
        width: 100%;
        height: 100%;
        margin-left: 0;
        padding-left: 0%;
        position: fixed;
        background-color: black;
        color: #fff;
    }

    70% {
        background-color: black;
        color: #fff;
    }

    90% {
        background-color: rgba(0, 0, 0, 0);
    }

    99% {
        z-index: 13;
        width: 100%;
        height: 100%;
        margin-left: 0;
        padding-left: 0%;
        position: fixed;

    }

    100% {
        color: #00000000;
        width: 0%;
        height: 0%;
        z-index: 0;
        margin-left: 200%;
        padding-left: 200%;
        position: relative;
    }
}

.loading-bg {
    z-index: 0;
    width: 0%;
    height: 0%;
    top: 0;
    left: 0;
    position: fixed;
    align-items: center;
    background-color: rgba(0, 0, 0, 0);
    display: flex;
    justify-content: center;
    margin: 0;

    animation: 2s ease 0s 1 loadDelayFade;
}

.loader {
    z-index: 0;

    width: 70px;
}

.loader-text {
    width: 70px;

    z-index: 0;
    color: #00000000;
    animation: 1.5s ease 0s 1 loadDelayFade;
}

.loader-text:after {
    content: 'Loading';
    animation: load 1.5s linear infinite, 2s ease 0s 1 loadDelayFade;
}

@keyframes load {
    0% {
        content: 'Loading';
    }

    33% {
        content: 'Loading.';
    }

    67% {
        content: 'Loading..';
    }

    100% {
        content: 'Loading...';
    }
}


/* Body */
body {
    background-color: var(--content-fill-color);
    margin-left: calc(var(--margin-leftright-size-percent) + 5%);
    margin-right: calc(var(--margin-leftright-size-percent) + 5%);
    margin-top: 0;
    margin-bottom: 0;
    color: lightgray;
    font-family: "interFont", sans-serif;
    text-align: justify;
    text-justify: inter-word;
    text-size-adjust: auto;
}

@media only screen and (max-width: 600px) {
    body {
        text-align: left;
    }
}

.left_banner {
    position: fixed;
    top: 0px;
    left: 0px;
    bottom: 0px;
    box-shadow: -5px 0px 20px black inset;
    width: var(--margin-leftright-size-percent);
    background-color: var(--banner-fill-color);
}

.right_banner {
    position: fixed;
    top: 0px;
    right: 0px;
    bottom: 0px;
    box-shadow: 5px 0px 20px black inset;
    width: var(--margin-leftright-size-percent);
    background-color: var(--banner-fill-color);
}

a[href="https://kwagabriel.github.io/"] {
    position: absolute;
    display: none;
    visibility: hidden;
}

/*Table of contents*/
#draggable {
    margin-left: 5%;
    margin-right: 5%;
    margin-top: 5%;
    margin-bottom: 5%;
    padding: 10px;
    text-align: center;
    cursor: move;
    z-index: 10;
    font-size: 1.1618em;
    border: 1px solid white;
    border-radius: 15px 50px 15px 15px;
}

#dragged {
    transform: translate(270%, 100%);
    width: 17%;
    position: fixed;
    z-index: 9;
    text-indent: 5%;
    text-align: left;
    background-color: var(--content-fill-color);
    box-shadow: 5px 5px 20px black;
    border-radius: 15px 50px;
    font-size: 0.8em;
    padding-bottom: 10px;
    transform-origin: left top;
}

#dragged.dragged-gamedoc-version {
    text-align: center;
    width: 29%;
    transform: scale(70%, 70%) translate(-125%, 20%);
    padding-bottom: 20px;
    font-size: 1em;
    border-radius: 15px 50px 15px 15px;
}

@media only screen and (max-width: 600px) {
    #draggable {
        font-size: 0.9em;
    }


    #dragged {
        transform: translate(-30%, 200%);
        width: 36%;
        font-size: 0.7em;
    }

    /*Table of contents*/
    #dragged h2 {
        text-indent: 0px;
    }

    /*list elements*/
    #dragged h3 {
        padding-left: var(--h3-leftindent);
        margin-top: 2%;
        margin-bottom: 5%;
        font-weight: normal;
        text-indent: 0 hanging;
        line-height: 7px;
    }

    #dragged.dragged-gamedoc-version {
        transform: scale(100%, 100%) translate(-50%, 215%);
        font-size: 0.9em;
        transition: color .25s ease, background-color .25s ease, box-shadow .25s ease;
    }

    #dragged.dragged-gamedoc-version:hover {
        color: #00000000;
        background-color: #00000000;
        box-shadow: none;
        transition: color .25s ease, background-color .25s ease, box-shadow .25s ease;
    }

    #dragged.dragged-gamedoc-version:hover {
        color: #00000000;
        background-color: #00000000;
        box-shadow: none;
        transition: color .25s ease, background-color .25s ease, box-shadow .25s ease;
    }

    #dragged.dragged-gamedoc-version:hover a {
        color: #00000000;
        transition: color .25s ease;
    }

    #dragged.dragged-gamedoc-version:hover iframe {
        opacity: 0;
        transition: opacity .25s ease;
    }


    #dragged.dragged-gamedoc-version:hover #draggable {
        color: white;
        background-color: var(--content-fill-color);
        transition: color .25s ease, background-color .25s ease;
    }

    #dragged.dragged-gamedoc-version:hover #draggable:hover {
        color: var(--content-fill-color);
        background-color: white;
        transition: color .25s ease, background-color .25s ease;
    }
}


.badge {
    width: 0%;
}

html {
    scroll-behavior: smooth;
}

a {
    color: var(--link-default-color);
    text-decoration: none;
}

a:hover {
    color: var(--link-hover-color);
    text-decoration: underline;
}

a:visited {
    color: var(--link-hover-color);
    text-decoration: none;
}

/*Text*/
::selection {
    color: var(--wine-red);
    background: rgba(255, 255, 255, 0);
    box-shadow: 5px 5px 20px white;
    text-shadow: black 1px 0 5px;
}

h1 {
    padding-left: var(--h1-leftindent);
    margin-top: 3%;
    margin-bottom: 1%;
    font-weight: normal;
    border-bottom: 1px solid lightgray;
}

/*Hide weird header line*/
h1:has(a[href="https://kwagabriel.github.io/"]) {
    border-bottom: 0px;
}

@media only screen and (max-width: 600px) {

    h1 {
        font-size: 2.4vh;
    }

    h2 {
        font-size: 2vh;
    }
}

h2 {
    padding-left: var(--h2-leftindent);
    margin-top: 1%;
    margin-bottom: 0%;
    font-weight: normal;
    border-bottom: none;
}

h3 {
    padding-left: var(--h3-leftindent);
    margin-top: 0%;
    margin-bottom: 0%;
    font-weight: normal;
}

p {
    padding-left: var(--p-leftindent);
    margin-top: 0%;
}

.h3a-rightalign+h3 {
    text-align: end;
}


/* Projects paragraphing */
.project-paragraph {
    padding-top: 1%;
    padding-bottom: 1%;
    padding-right: 2.5%;
    margin-bottom: 2%;
    border-left: 3px solid #ccc;
    background-color: #252424;
    border-radius: 15px 50px;
}

@media only screen and (max-width: 600px) {

    .project-paragraph {
        margin-bottom: 1vh;
        margin-top: 1vh;
    }

}

.project-paragraph ul {
    margin-left: -4.8%;
}

/*Projects image*/
img.project-thumbnail {
    position: absolute;
    z-index: 8;
    width: fit-content;
    height: fit-content;
    max-width: none;
    max-height: none;
    transform: scale(25%, 25%) translate(-310%, -130%);
}

img.project-banner {
    z-index: 8;
    max-width: 137%;
    margin-left: -20%;
    box-shadow: 0px 5px 20px black;
}

img.project-media-img {
    z-index: 9;
    position: relative;
    width: 30%;
    margin-left: 30%;
    transition: transform .25s ease, box-shadow .25s ease, z-index 1s ease;
}

img.project-media-img:hover {
    z-index: 10;
    transform: scale(250%);
    box-shadow: 3px 3px 10px black;
    transition: transform .25s ease, box-shadow .25s ease, z-index 0s ease;

}

@media only screen and (max-width: 600px) {

    img.project-media-img:hover {
        transform: scale(450%);
    }

}

img.project-media-img:hover+p.project-media-imgtext {
    z-index: 11;
    transform: scale(-100%, -100%);
    text-shadow: rgba(0, 0, 0, 0) 1px 0 5px;
    color: rgba(0, 0, 0, 0);
    transition: text-shadow .15s ease, color .15s ease, transform .15s ease;
}

p.project-media-imgtext {
    font-size: small;
    z-index: 9;
    position: relative;
    text-align: center;
    color: white;
    text-shadow: black 1px 0 5px,
        -1px -1px 0 black,
        1px -1px 0 black,
        -1px 1px 0 black,
        1px 1px 0 black;

    transform: translate(-6%, -200%);
    transition: text-shadow .5s ease, color .5s ease, transform .5s ease;
}


/*video banner*/
.videobanner-container {
    transform-origin: right top;
    position: absolute;
    box-shadow: 0px 3px 10px black;
    width: 87vw;
    height: 90px;
    overflow: clip;
    transform: translateY(-32px) translateX(15px);
}

.videobanner-player {
    width: 100%;
    object-fit: cover;
    object-position: 50% 85%;
    transform: translateY(-53%)
}

@media only screen and (min-width: 600px) {

    .videobanner-container {

        transform: translateY(-23px);
    }

    .videobanner-player {
        transform: translateY(-82%);
    }

}

